# Snake

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Game.cpp  Game.h  Grid.cpp  Grid.h  Input.cpp  Input.h  Menu.cpp  Menu.h  README.md  SceneManager.cpp  SceneManager.h  Snake.sln  Snek.cpp  Snek.h  Text.cpp  Text.h  TextureManager.cpp  TextureManager.h  Wall.cpp  Wall.h  compile.bash  fruit.cpp  fruit.h  installSDL.bash  main.cpp  piece.cpp  piece.h  stdafx.cpp  stdafx.h
SDL_FULL/include/: SDL_render.h
Snake Source/: Button.h  Grid.h  Input.h  Menu.h  SceneManager.h  Snake.vcxproj  Snake.vcxproj.filters  Snek.cpp  Text.cpp  TextureManager.h  fruit.h  main.cpp  piece.cpp  stdafx.h
Snake Source/Release/Snake.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Snake.lastbuildstate  Snake.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Snake Source/assests/: my_icon.c
SnakeSourceCode/: READMEH.txt  Snake.sln
SnakeSourceCode/Piano_Thing/: Button.cpp  Game.cpp  Grid.cpp  Input.cpp  Menu.cpp  Piano_Thing.vcxproj  SceneManager.cpp  Text.h  piece.h  stdafx.cpp
SnakeSourceCode/Piano_Thing/Debug/: FlappyBird.pch  Piano_Thing.pch  button.obj.enc  fruit.obj.enc  grid.obj.enc  menu.obj.enc  scenemanager.obj.enc  snek.obj.enc  text.obj.enc  vc141.idb  vc142.idb
SnakeSourceCode/Piano_Thing/Debug/FlappyBird.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlappyBird.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnakeSourceCode/Piano_Thing/Debug/Piano_Thing.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+4 more)
(+21 files in other folders)
